--- a/index.html
+++ b/index.html
@@ -6,24 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>primeiro B</title>
-<script>
-    //alert("oi,eu sou um alert!");
-    //document.write("escrevendo no corpo da pag.");
-    //console.log("sou uma mensagem de console.")
-    function meChame(){
-        document.write("Escrevi na sua pag.");
-        alert("veja o que eu escrevi na sua pg.");
+    <script src="estudo.js"></script>
 
-    }
-    function meuNome(nome){
-        document.write('  <button onclick="meChame()"> clique aqui</button> Oi ' + nome );
-    }
-</script>
 
 </head>
 <body>
-    <button onclick="meChame()"> clique aqui</button>
-    <button onclick="meuNome('guilherme')">diga meu nome</button>
+    <button onclick="escreva()"> clique aqui</button>
+ 
 
 </body>
 </html>
