--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -12,7 +11,7 @@
 </head>
 <body>
     <button onclick="escreva()"> clique aqui</button>
- 
-
+ <button onclick="mostraLista()"> professores</button>
+ <button onclick="multiplica()"> tabuada</button>
 </body>
 </html>
