--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 </head>
 <body>
-    <button onclick="escreva()"> clique aqui</button>
- <button onclick="mostraLista()"> professores</button>
- <button onclick="multiplica()"> tabuada</button>
+ valor:  <input id="valor" type="text"> <br>
+ juros(mensais): <input id="juros" type="text"> <br>
+ nr. meses: <input id="meses" type="text"> <br>
+ <button onclick="total()">enviar</button>
+
 </body>
 </html>
