--- a/index.html
+++ b/index.html
@@ -15,5 +15,16 @@
  nr. meses: <input id="meses" type="text"> <br>
  <button onclick="total()">enviar</button>
 
+
+<br><br><br><br>
+<span id="resul">resultado 0,00</span><br>
+
+primeiro numero: <input id="n1" type="text"><br>
+segundo numero: <input id="n2" type="text"><br>
+terceiro numero: <input id="n3" type="text"><br>
+quarto numero: <input id="n4" type="text"><br>
+
+<button onclick="media()">calcular a media </button>
+
 </body>
 </html>
