--- a/index.html
+++ b/index.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>primeiro B</title>
+    <title>Primeiro B</title>
     <script src="estudo.js"></script>
-
-
 </head>
 <body>
- valor:  <input id="valor" type="text"> <br>
- juros(mensais): <input id="juros" type="text"> <br>
- nr. meses: <input id="meses" type="text"> <br>
- <button onclick="total()">enviar</button>
 
+Valor: <input id="Valor" type="text" ><br>
+Juros(Mensais): <input id="Juros" type="text" ><br>
+Nr Meses: <input id="Meses" type="text" ><br>
+<button onclick="total()">Enviar</button>
 
-<br><br><br><br>
-<span id="resul">resultado 0,00</span><br>
+ <br><br><br><br>
 
-primeiro numero: <input id="n1" type="text"><br>
-segundo numero: <input id="n2" type="text"><br>
-terceiro numero: <input id="n3" type="text"><br>
-quarto numero: <input id="n4" type="text"><br>
+ <span id="resul">Resultado 0,00</span><br>
 
-<button onclick="media()">calcular a media </button>
+Primeiro numero : <input id="n1" type="text"><br>
+Segundo numero : <input id="n2" type="text"><br>
+Terceiro numero : <input id="n3" type="text"><br>
+Quarto numero: <input id="n4" type="text"><br>
+
+<button onclick="media()">Calcular a Média</button><br>
+<button onclick="somar()">Calcular a Soma</button><br>
+<button onclick="diminuir()">Calcular a Diminuição</button><br>
+<button onclick="multiplicar()"> Calcular a Multiplicação</button><br>
 
 </body>
 </html>
+
